--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,14 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=shaikbasha518512@gmail.com
 spring.mail.password=ypbx jplh pqba binr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ChatGPT
+open.api.url = https://api.openai.com/v1/chat/completions
+open.api.model = gpt-3.5-turbo
+open.api.key = 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
